improvements [TASK-1198] - fix duplicate gold column value - imporove copy button - right align file size

--- a/src/plugin/modules/components/json-viewer.css
+++ b/src/plugin/modules/components/json-viewer.css
@@ -1,12 +1,23 @@
 .mini-button {
     padding: 2px;
     /* margin-right: 2px; */
-    width: 1em;
+    /* width: 1em; */
     border: 2px transparent solid;
     cursor: pointer;
     display: inline-block;
-    background-color: rgba(249, 231, 157, 1);
+    background-color: transparent;
     text-align: center;
+}
+
+.mini-button:hover {
+    background-color: rgb(211, 211, 211);
+    border: 2px gray solid;
+}
+
+.mini-button:active {
+    border: 2px gray solid;
+    background-color: rgba(249, 231, 157, 0.3);
+    /* color: #FFF; */
 }
 
 .mini-spacer {
@@ -20,12 +31,3 @@
     text-align: center;
 }
 
-.mini-button:hover {
-    border: 2px silver solid;
-}
-
-.mini-button:active {
-    border: 2px gray solid;
-    background-color: rgba(249, 231, 157, 0.3);
-    /* color: #FFF; */
-}
